# sbffi

./: .eslintrc.js  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  TODO.md  binding.gyp  package.json
.github/workflows/: ci.yaml
lib/: index.js
src/: macros.h  sbffi.c  sbffi.cc  sbffi.cpp  sbffi_common.h  sbffi_common.hpp  sbffi_dyncall.c  sbffi_dyncall.cpp  sbffi_dyncall.h  sbffi_dyncall.hpp  sbffi_dyncallback.c  sbffi_dyncallback.cpp  sbffi_dyncallback.h  sbffi_dyncallback.hpp  sbffi_dynload.c  sbffi_dynload.cpp  sbffi_dynload.h  sbffi_dynload.hpp
test/: bench.js  bench.mjs  ensure-built.js  test.js
test/adder/: Makefile  adder.c  adder.wat
test/napiaddon/: addon.c  binding.gyp  index.js  package.json
